styles.css
:root {
  --brand-color: #0071EB;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Poppins", sans-serif;
  scroll-behavior: smooth;
}

/* header start */
a {
  color: inherit;
  text-decoration: none;
  cursor: pointer;
}

header {
  background-color: white;
  height: 4em;
  width: 100%;
  position: fixed;
  top: 0;
  box-shadow: rgba(0, 0, 0, 0.75) 0 1px;
}

header > a:hover {
  color: inherit;
  text-decoration: none;
  cursor: pointer;
}

.header-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  /* border: 1px solid red; */
  padding: 1em 5.625em;

}
/* #header_logo {
  position: absolute; 
  left: 24px;
  top: 0;
  height: 4em;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 1px solid red;
} */

ul {
  list-style: none;
}

/* .nav {
  display: inline-block;
} */

.nav > ul {
  /* display: inline-flex; */
  /* height: 100%; */
  text-align: center;
  /* align-items: center; */
}

.nav ul li {
  display: inline;
}

.nav > ul > li > a {
  padding-left: 1em;
  padding-right: 1em;
}

.nav > ul > li > a:hover {
  /* color: red; */
  text-decoration: underline;
}

.button {
  /* display: flex; */
  /* align-items: center; */
  /* width: 100%; */
  /* height: 75%; */
  /* line-height: 1; */
  text-transform: uppercase;
  font-weight: 700;
  /* margin: 0 0 0 24px; */
  /* padding-left: 1rem; */
  /* padding-right: 1rem; */
  padding: 0.6em 1.5em;
  /* background-color: #f1c40f; */
  background-color: var(--brand-color);
  color: #fff;
  border-radius: 999px;
  /* border: 5px solid red; */
    /* display: flex; */
    /* align-items: center; */
    /* justify-content: center; */
    /* line-height: 1.5; */
    /* text-transform: uppercase; */
    /* font-weight: 700; */
    /* width: 10%; */
    /* padding: 0.75rem; */
    /* margin-top: 1rem; */
    background-color: var(--brand-color);
    color: #fff;
    /* border-radius: 5px; */
}

.nav .button {
  margin-left: 3em;
}

.button:hover {
  background-color: #005FC9;
  border: 0 solid transparent;
  text-decoration: none;
}

/* #header_nav {
  position: absolute;
  right: 24px;
  top: 0;
  height: 60px;
} */
/* header end */

section {
  scroll-margin-top: 4em;
}

.hero-section {
  /* width: 100%; */
  height: 90vh; /* possible remove this? */
  /* background-color for testing purposes */
  background-color: #ddd;
}

.hero-section h1 {
  font-size: 5em;
  /* border: 1px solid red; */
}

/*
.hero-image {
  width: 100%;
  object-fit: cover;
  position: fixed;
  top: -150px;
  z-index: -1;
}*/

.wrapper {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  padding-left: 5.625em;
  height: 100%;
  border: 1px solid red;
}

.test-container {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  color: #fff;
  border: 1px solid red;
}

.hero-section .button {
  margin-top: 1em;
}

.about-section {
  width: 100%;
  padding: 2em 5.625em;
  background-color: #fff;
  /* border: 1px solid #fff; */
}


.grid {
  display: flex;
  justify-content: space-between;
  /* margin: 3em; */
  /* border: 1px solid red; */
}

.container {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  border: 1px solid red;
  /* padding: 10px; */
  /* margin: 10px; */
}

.brand-title {
  font-size: 1em;
  text-transform: uppercase;
  text-align: left;
  color: #0071EB;
  /* padding: 5px; */
}

.subtitle {
  font-size: 1.5em;
  text-align: left;
  /* padding: 5px; */
  margin-bottom: 0.5em;
}

.desc {
  text-align: left;
  /* padding: 5px; */
}

.body-link {
  text-decoration: underline;
  /* padding: 5px; */
  margin-top: 1em;
}

.services-section {
  padding: 2em 5.625em;
  width: 100%;
  /* height: 50vh; */
  background: linear-gradient(#fff, #ddd);
  border: 1px solid #fff;
}

.grid-services {
  display: flex;
  justify-content: space-evenly;
}

/* .button:hover {
  background-color: #005FC9;
} */

.contact-section {
  width: 100%;
  background-color: white;
  border: 1px solid #fff;
}

.img {
  width: 100%;
  max-width: 500px;
  background-position: center;
  object-fit: cover;
  /* padding: 10px; */
}

.flex {
  display: flex;
  justify-content: space-evenly;
  /* align-items: center; */
  /* height: 100%; */
  margin: 3em 0 7em 0;
}

.card {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 1.5em;
  /* border: 1px solid red; */
  max-width: 350px;
  border-radius: 10px;
  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, 
              rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
}

.img-div {
  /* width: 100%; */
  width: 300px;
  height: 200px;
  background-color: lightgray;
}

.desc {
  display: flex;
  flex-direction: column;
}

.desc a, span {
  color: var(--brand-color);
}

.card > img {
  width: 100%;
  background-position: center;
  object-fit: cover;
}

.form {
  min-width: 300px;
  max-width: 500px;
  width: 500px;padding: 10px;
}

.info {
  min-width: 500px;
  max-width: 500px;
  /* background-color: #eee; */
}

.title-container {
  display: flex;
  text-align: left;
  width: 100%;
}

form {
  width: 100%;
  margin: 0 auto;
  padding-top: 10px;
  padding-bottom: 10px;
}

label {
  display: block;
  padding: 5px;
  margin: 5px 0 5px 0;
}

input {
  width: 100%;
  padding: 5px;
  margin-top: 5px;
}

textarea {
  width: 100%;
  max-width: 100%;
  height: 5em;
}

.required {
  color: red;
  font-weight: 600;
}

.button-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
}

.submit-button {
  width: 100%;
  text-transform: uppercase;
  font-weight: 700;
  font-size: 1.25em;
  color: #fff;
  background-color: var(--brand-color);
  padding: 0.5em;
  border: none;
  margin: 10px;
  border-radius: 10px;
  cursor: pointer;
}

.submit-button:hover {
  background-color: #005FC9;
}

/* footer start */
footer {
  height: 20vh;
  background-color: #555;
}
/* footer end */

